spring version up 및 불필요한 소스 정리.